@@ -1,3 +1,7 @@
+2007-01-16  Vladimir Krasnov  <vladimirk@mainsoft.com>
+
+	* TemplateControl.jvm.cs: added 2.0 event names for wiring up
+
 2007-01-08  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* PageTheme.cs: implemented
